Replaced grid with flexbox for sticky footer to fix white space issue

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -1,24 +1,19 @@
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html {
   box-sizing: border-box;
   height: 100%;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-img.responsive {
-  height: auto;
-  width: 100%;
-}
-
 body {
   background: $body-background;
-  display: grid;
   color: #333;
+  display: flex;
+  flex-direction: column;
   font: 16px/1.5 "Open Sans", sans-serif;
-  grid-template-rows: 1fr auto;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 h1 {
@@ -47,15 +42,17 @@ p {
 }
 
 main {
-  min-height: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-columns: 100%;
+  flex: 1 0 auto;
 }
 
 section {
   min-height: 300px;
   padding: 1.5em;
+}
+
+img.responsive {
+  height: auto;
+  width: 100%;
 }
 
 
@@ -256,6 +253,10 @@ section {
    justify-items: center;
   }
 
+}
+
+a.active {
+  border-bottom: 2px solid $primary-color;
 }
 
 // UTILITIES
